--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <h1>Canarydsa</h1>
+    <h1>Canarydsda</h1>
     <h2>second<h2>
 <head>
     <meta charset="UTF-8">
